Update User template

--- a/one/templates/drawers/_debug-drawer.html
+++ b/one/templates/drawers/_debug-drawer.html
@@ -1,5 +1,5 @@
 {% load static i18n %}
-{% if ENABLE_DEBUG_MODE %}
+{% if True %}
 <!--begin::Chat drawer-->
 <div id="kt_drawer_debug" class="bg-body" data-kt-drawer="true"
      data-kt-drawer-name="debug" data-kt-drawer-activate="true"
@@ -32,9 +32,9 @@
 								<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
                      viewBox="0 0 24 24" fill="none">
 									<rect opacity="0.5" x="6" y="17.3137" width="16" height="2"
-                        rx="1" transform="rotate(-45 6 17.3137)" fill="black"/>
+                        rx="1" transform="rotate(-45 6 17.3137)" fill="black"></rect>
 									<rect x="7.41422" y="6" width="16" height="2" rx="1"
-                        transform="rotate(45 7.41422 6)" fill="black"/>
+                        transform="rotate(45 7.41422 6)" fill="black"></rect>
 								</svg>
 							</span>
           <!--end::Svg Icon-->
