--- a/one/templates/topbar/base.html
+++ b/one/templates/topbar/base.html
@@ -73,7 +73,7 @@
     <!--end::Notifications-->
   {% endif %}
 
-  {% if ENABLE_DEBUG_MODE %}
+  {% if True %}
     <!--begin::Debug-->
     <div class="d-flex align-items-center ms-1 ms-lg-3">
       <!--begin::Menu wrapper-->
