--- a/one/templates/account/password_change.html
+++ b/one/templates/account/password_change.html
@@ -1,10 +1,11 @@
-{% extends "account/base-col-2.html" %}
+{% extends "base.html" %}
+{% load static i18n %}
 
-{% load i18n %}
+{% block title %}User: {{ object.username }}{% endblock %}
 
-{% block head_title %}{% translate "Change Password" %}{% endblock %}
+{% block content %}
 
-{% block inner %}
+  {% include 'users/partials/user_card.html' with user=request.user %}
   <!--begin::Wrapper-->
   <div class="w-lg-600px bg-body rounded shadow-sm p-10 p-lg-15 mx-auto">
     <!--begin::Form-->
