--- a/one/templates/base.html
+++ b/one/templates/base.html
@@ -69,11 +69,11 @@
            id="kt_content">
 
         <!--layout-partial:layout/toolbars/_toolbar-1.html-->
-{#        {% include 'layout/toolbars/_toolbar-1.html' %}#}
+{#        {% include 'toolbars/_toolbar-1.html' %}#}
 
         <!--begin::Post-->
         <div class="post d-flex flex-column-fluid" id="">
-          <div id="kt_content_container" class="container-xxl">
+          <div id="kt_content_container" class="container-xxl pt-5">
           {% if warning %}
             <!--begin::Notice-->
             <div class="notice d-flex bg-light-warning rounded border-warning border border-dashed p-6">
