--- a/one/templates/users/partials/user_card.html
+++ b/one/templates/users/partials/user_card.html
@@ -48,41 +48,41 @@
             <div class="d-flex flex-wrap fw-bold fs-6 mb-4 pe-2">
               <!--<a href="#"
                  class="d-flex align-items-center text-gray-400 text-hover-primary me-5 mb-2">-->
-                <!--begin::Svg Icon | path: icons/duotune/communication/com006.svg-->
-                <!--<span class="svg-icon svg-icon-4 me-1">
-                  <svg xmlns="http://www.w3.org/2000/svg"
-                       width="24"
-                       height="24"
-                       viewBox="0 0 24 24"
-                       fill="none">
-                    <path opacity="0.3"
-                          d="M22 12C22 17.5 17.5 22 12 22C6.5 22 2 17.5 2 12C2 6.5 6.5 2 12 2C17.5 2 22 6.5 22 12ZM12 7C10.3 7 9 8.3 9 10C9 11.7 10.3 13 12 13C13.7 13 15 11.7 15 10C15 8.3 13.7 7 12 7Z"
-                          fill="black"/>
-                    <path
-                      d="M12 22C14.6 22 17 21 18.7 19.4C17.9 16.9 15.2 15 12 15C8.8 15 6.09999 16.9 5.29999 19.4C6.99999 21 9.4 22 12 22Z"
-                      fill="black"/>
-                  </svg>
-                </span>-->
-                <!--end::Svg Icon-->
-                <!--Developer</a>-->
+              <!--begin::Svg Icon | path: icons/duotune/communication/com006.svg-->
+              <!--<span class="svg-icon svg-icon-4 me-1">
+                <svg xmlns="http://www.w3.org/2000/svg"
+                     width="24"
+                     height="24"
+                     viewBox="0 0 24 24"
+                     fill="none">
+                  <path opacity="0.3"
+                        d="M22 12C22 17.5 17.5 22 12 22C6.5 22 2 17.5 2 12C2 6.5 6.5 2 12 2C17.5 2 22 6.5 22 12ZM12 7C10.3 7 9 8.3 9 10C9 11.7 10.3 13 12 13C13.7 13 15 11.7 15 10C15 8.3 13.7 7 12 7Z"
+                        fill="black"/>
+                  <path
+                    d="M12 22C14.6 22 17 21 18.7 19.4C17.9 16.9 15.2 15 12 15C8.8 15 6.09999 16.9 5.29999 19.4C6.99999 21 9.4 22 12 22Z"
+                    fill="black"/>
+                </svg>
+              </span>-->
+              <!--end::Svg Icon-->
+              <!--Developer</a>-->
               <!--<a href="#"
                  class="d-flex align-items-center text-gray-400 text-hover-primary me-5 mb-2">-->
-                <!--begin::Svg Icon | path: icons/duotune/general/gen018.svg-->
-                <!--<span class="svg-icon svg-icon-4 me-1">
-																<svg xmlns="http://www.w3.org/2000/svg"
-                                     width="24"
-                                     height="24"
-                                     viewBox="0 0 24 24"
-                                     fill="none">
-																	<path opacity="0.3"
-                                        d="M18.0624 15.3453L13.1624 20.7453C12.5624 21.4453 11.5624 21.4453 10.9624 20.7453L6.06242 15.3453C4.56242 13.6453 3.76242 11.4453 4.06242 8.94534C4.56242 5.34534 7.46242 2.44534 11.0624 2.04534C15.8624 1.54534 19.9624 5.24534 19.9624 9.94534C20.0624 12.0453 19.2624 13.9453 18.0624 15.3453Z"
-                                        fill="black"/>
-																	<path
-                                    d="M12.0624 13.0453C13.7193 13.0453 15.0624 11.7022 15.0624 10.0453C15.0624 8.38849 13.7193 7.04535 12.0624 7.04535C10.4056 7.04535 9.06241 8.38849 9.06241 10.0453C9.06241 11.7022 10.4056 13.0453 12.0624 13.0453Z"
-                                    fill="black"/>
-																</svg>
-															</span>-->
-                <!--end::Svg Icon--><!--SF,
+              <!--begin::Svg Icon | path: icons/duotune/general/gen018.svg-->
+              <!--<span class="svg-icon svg-icon-4 me-1">
+                              <svg xmlns="http://www.w3.org/2000/svg"
+                                   width="24"
+                                   height="24"
+                                   viewBox="0 0 24 24"
+                                   fill="none">
+                                <path opacity="0.3"
+                                      d="M18.0624 15.3453L13.1624 20.7453C12.5624 21.4453 11.5624 21.4453 10.9624 20.7453L6.06242 15.3453C4.56242 13.6453 3.76242 11.4453 4.06242 8.94534C4.56242 5.34534 7.46242 2.44534 11.0624 2.04534C15.8624 1.54534 19.9624 5.24534 19.9624 9.94534C20.0624 12.0453 19.2624 13.9453 18.0624 15.3453Z"
+                                      fill="black"/>
+                                <path
+                                  d="M12.0624 13.0453C13.7193 13.0453 15.0624 11.7022 15.0624 10.0453C15.0624 8.38849 13.7193 7.04535 12.0624 7.04535C10.4056 7.04535 9.06241 8.38849 9.06241 10.0453C9.06241 11.7022 10.4056 13.0453 12.0624 13.0453Z"
+                                  fill="black"/>
+                              </svg>
+                            </span>-->
+              <!--end::Svg Icon--><!--SF,
                 Bay Area</a>-->
               <a href="#"
                  class="d-flex align-items-center text-gray-400 text-hover-primary mb-2">
@@ -131,7 +131,23 @@
         {% url 'users:update' as user_edit_url %}
         <a class="nav-link text-active-primary ms-0 me-10 py-5
            {% if user_edit_url in request.path %}active {% else %}{% endif %}"
-           href="{% url 'users:update' %}">{% translate 'Settings' %}</a>
+           href="{% url 'users:update' %}">{% translate 'Change Profile' %}</a>
+      </li>
+      <!--end::Nav item-->
+      <!--begin::Nav item-->
+      <li class="nav-item mt-2">
+        {% url 'account_email' as account_email_url %}
+        <a class="nav-link text-active-primary ms-0 me-10 py-5
+           {% if account_email_url in request.path %}active {% else %}{% endif %}"
+           href="{% url 'account_email' %}">{% translate 'Change Email' %}</a>
+      </li>
+      <!--end::Nav item-->
+      <!--begin::Nav item-->
+      <li class="nav-item mt-2">
+        {% url 'account_change_password' as account_change_password_url %}
+        <a class="nav-link text-active-primary ms-0 me-10 py-5
+           {% if account_change_password_url in request.path %}active {% else %}{% endif %}"
+           href="{% url 'account_change_password' %}">{% translate 'Change Password' %}</a>
       </li>
       <!--end::Nav item-->
     </ul>
