fix error pages url

--- a/one/templates/404.html
+++ b/one/templates/404.html
@@ -22,7 +22,7 @@
         <!--end::Message-->
         <!--begin::Action-->
         <div class="text-center">
-          <a href="{% url 'home' %}" class="btn btn-lg btn-primary fw-bolder">{% translate 'Go to homepage' %}</a>
+          <a href="{% url 'pages:home' %}" class="btn btn-lg btn-primary fw-bolder">{% translate 'Go to homepage' %}</a>
         </div>
         <!--end::Action-->
       </div>
