Add options to group table

--- a/one/templates/auth/group_list.html
+++ b/one/templates/auth/group_list.html
@@ -14,7 +14,7 @@
         <!--begin::Toolbar-->
         <div class="d-flex justify-content-end"
              data-kt-table-toolbar="base">
-          {#          {% include 'partials/widgets/tables/_filter.html' %}#}
+          {% include 'partials/table/_filter.html' %}
           {# {% include 'partials/widgets/tables/_export.html' %}#}
           <!--begin::Add group-->
           <button type="button" class="btn btn-primary" data-bs-toggle="modal"
