--- a/one/templates/auth/group_list.html
+++ b/one/templates/auth/group_list.html
@@ -169,6 +169,88 @@
     <!--end::Modal dialog-->
   </div>
   <!--end::Modal - Add new group-->
+  {% for object in object_list %}
+  <!--begin::Modal - Update group-->
+  <div class="modal fade" id="kt_modal_update_group_{{ object.id }}" tabindex="-1" aria-hidden="true">
+    <!--begin::Modal dialog-->
+    <div class="modal-dialog modal-dialog-centered mw-650px">
+      <!--begin::Modal content-->
+      <div class="modal-content">
+        <!--begin::Modal header-->
+        <div class="modal-header" id="kt_modal_update_group_header">
+          <!--begin::Modal title-->
+          <h2>{% translate 'Update group' %}</h2>
+          <!--end::Modal title-->
+          <!--begin::Close-->
+          <div class="btn btn-sm btn-icon btn-active-color-primary" data-bs-dismiss="modal">
+            <!--begin::Svg Icon | path: icons/duotune/arrows/arr061.svg-->
+            <span class="svg-icon svg-icon-1">
+              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+                <rect opacity="0.5" x="6" y="17.3137" width="16" height="2" rx="1" transform="rotate(-45 6 17.3137)"
+                      fill="black"/>
+                <rect x="7.41422" y="6" width="16" height="2" rx="1" transform="rotate(45 7.41422 6)" fill="black"/>
+              </svg>
+            </span>
+            <!--end::Svg Icon-->
+          </div>
+          <!--end::Close-->
+        </div>
+        <!--end::Modal header-->
+        <!--begin::Form-->
+        <form id="kt_modal_update_group_form" class="form" enctype="multipart/form-data"
+              action="{% url 'auth:group-update' object.id %}" method="post">
+          {% csrf_token %}
+          <!--begin::Modal body-->
+          <div class="modal-body py-10 px-lg-17">
+            <!--begin::Input group-->
+            <div class="mb-5 fv-row">
+              <!--begin::Label-->
+              <label class="required fs-5 fw-bold mb-2">{% translate 'Update Group' %}</label>
+              <!--end::Label-->
+              <!--begin::Input-->
+              <input type="text"
+                     class="form-control form-control-solid"
+                     placeholder="{% translate 'Name' %}"
+                     name="name" id="id_name" required/>
+              <!--end::Input-->
+            </div>
+            <!--end::Input group-->
+            {% for field in context_form %}
+              <!--begin::Input group-->
+              <div class="mb-5 fv-row">
+                <!--begin::Label-->
+                <label class="fs-5 fw-bold mb-2 {% if field.field.required %}required{% endif %}">
+                  {{ field.label|title }}
+                </label>
+                <!--end::Label-->
+                <!--begin::Input-->
+                {{ field }}
+                <!--end::Input-->
+              </div>
+              <!--end::Input group-->
+            {% endfor %}
+          </div>
+          <!--end::Modal body-->
+          <!--begin::Modal footer-->
+          <div class="modal-footer flex-center">
+            <!--begin::Button-->
+            <button type="submit" name="action_add" id="kt_modal_update_group_submit" class="btn btn-primary">
+              <span class="indicator-label">{% translate "Submit" %}</span>
+              <span class="indicator-progress">{% translate "Please wait" %}...
+								<span class="spinner-border spinner-border-sm align-middle ms-2"></span></span>
+            </button>
+            <!--end::Button-->
+          </div>
+          <!--end::Modal footer-->
+        </form>
+        <!--end::Form-->
+      </div>
+      <!--end::Modal content-->
+    </div>
+    <!--end::Modal dialog-->
+  </div>
+  <!--end::Modal - Update group-->
+  {% endfor %}
 {% endblock modal %}
 
 {% block inline_javascript %}
